DynamicJava: Added SourceChecker, which allows batch static checking of a collection of source files using the existing type checker, etc., implementation.  For support, added a CompilationUnit AST node, Library objects which model collections of DJClasses, CompositeExceptions for reporting multiple errors at once, and LibraryContext forr handling names that are provided by a Library.
git-svn-id: file:///tmp/test-svn/trunk@4804 fe72c1cf-3628-48e9-8b72-1c46755d3cff